--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ body {
 }
 
 .main-picture {
-  background-image: url("https://via.placeholder.com/594x1032");
+  background-image: url("https://picsum.photos/id/0/594/1032");
   padding: 0;
   margin-top: 24px;
   margin-left: 24px;
